# rust-uploader

./: .env.sample  Cargo.toml  README.md
src/: helpers.rs  macros.rs  main.rs
src/middleware/: key_guard.rs  mod.rs  route_log.rs
src/routes/: delete.rs  upload.rs
