[package]
name = "rust-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["multipart"] }
chrono = "0.4.23"
colored = "2.0.0"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
rust-s3 = "0.32.3"
serde = "1.0.152"
serde_json = "1.0.93"
sha2 = "0.10.6"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["limit", "trace"] }
