[package]
name = "rust-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
chrono = "0.4.39"
colored = "3.0.0"
dotenvy = "0.15.7"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.8.5"
rust-s3 = "0.35.1"
serde = "1.0.216"
serde_json = "1.0.135"
sha2 = "0.10.6"
time = "0.3.35"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["limit", "trace"] }
