[package]
name = "rust-uploader"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "macros"] }
backblaze-b2-client = "0.1.4"
chrono = "0.4.40"
colored = "3.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
hmac = "0.12.1"
jwt = "0.16.0"
rand = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.6"
time = "0.3.39"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["io", "compat"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["limit", "trace"] }
